--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,5 +13,25 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-- script: dotnet build --configuration $(buildConfiguration)
-  displayName: 'dotnet build $(buildConfiguration)'
+
+- task: DotNetCoreCLI@2
+  inputs:
+    command: publish
+    publishWebProjects: True
+    arguments: '--configuration $(BuildConfiguration --output $(Build.ArtifactStagingDirectory)
+    zipAfterPublish: True
+    
+- task: PublishBuildArtifacts@1
+  inputs:
+    pathtoPublish: '$(Build.artifatStagingDirectory)'
+    artifactName: 'myWebsiteName'
+    
+- task: AzureWebApp@1
+  inputs
+    azureSubscription: 'hannahmyAtlas'
+    #appName:
+    package: '$(System.ArtifactsDirectory/**/*.zip'
+    
+#steps:
+#- script: dotnet build --configuration $(buildConfiguration)
+#  displayName: 'dotnet build $(buildConfiguration)'
