--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,10 @@ variables:
 
 steps:
 
+- script: dotnet build --configuration $(buildConfiguration)
+  displayName: 'dotnet build $(buildConfiguration)'
+  
+  
 - task: DotNetCoreCLI@2
   inputs:
     command: publish
@@ -32,6 +36,4 @@ steps:
     #appName:
     package: '$(System.ArtifactsDirectory/**/*.zip'
     
-#steps:
-#- script: dotnet build --configuration $(buildConfiguration)
-#  displayName: 'dotnet build $(buildConfiguration)'
+
