--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,27 +13,20 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-
-- script: dotnet build --configuration $(buildConfiguration)
-  displayName: 'dotnet build $(buildConfiguration)'
-  
-  
 - task: DotNetCoreCLI@2
   inputs:
     command: publish
     publishWebProjects: True
-    arguments: '--configuration $(BuildConfiguration --output $(Build.ArtifactStagingDirectory)
+    arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
     zipAfterPublish: True
-    
+
+# this code takes all the files in $(Build.ArtifactStagingDirectory) and uploads them as an artifact of your build.
 - task: PublishBuildArtifacts@1
   inputs:
-    pathtoPublish: '$(Build.artifatStagingDirectory)'
+    pathtoPublish: '$(Build.ArtifactStagingDirectory)' 
     artifactName: 'myWebsiteName'
-    
 - task: AzureWebApp@1
-  inputs
+  inputs:
     azureSubscription: 'hannahmyAtlas'
-    #appName:
-    package: '$(System.ArtifactsDirectory/**/*.zip'
-    
-
+    appName: 'hannah-pwc-deployment-test'
+    package: '$(System.ArtifactsDirectory)/**/*.zip'
